# rsomics-tsv-crosstab

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  fmtg.rs  lib.rs  ops.rs
tests/: compat.rs  smoke.rs
tests/golden/: crosstab_count.txt  crosstab_sum.txt  data.tsv
