[package]
name = "rsomics-tsv-crosstab"
version = "0.1.0"
description = "Cross-tabulate a delimited file into a contingency table — like GNU datamash crosstab"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-tsv-crosstab"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-tsv-crosstab"
path = "src/main.rs"

[lib]
name = "rsomics_tsv_crosstab"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
